--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div class="margin flex">
         <h4 class='center'>Edit Existing Dog</h4>
         <form id='dog-form' class="padding margin border-round border-grey">
-          <input type="text" name="name" placeholder="dog's name" value="" />
-          <input type="text" name="breed" placeholder="dog's breed" value="" />
-          <input type="text" name="sex" placeholder="dog's sex" value="" />
+          <input type="text" name="name" placeholder="dog's name" value="" id="name"/> 
+          <input type="text" name="breed" placeholder="dog's breed" value="" id="breed" />
+          <input type="text" name="sex" placeholder="dog's sex" value="" id="sex"/>
           <input type="submit" value="Submit" />
-        </form>
+        </form> 
       </div>
-
+ 
       <div class="margin flex">
         <h4 class='center'>Registered Dogs</h4>
         <table class='margin' border="1">
